# kdd26-prep-analysis

./: .gitignore  README.md  pyproject.toml
auto_prepper/core/: dataset.py  hyperparameter.py  optimizer.py  pipeline.py  pool.py  profiling.py  transformation.py
auto_prepper/io/: input.py  integration.py  output.py  separation.py
auto_prepper/optimizers/: preset_adaptable.py  random_search.py
auto_prepper/pipelines/: presets.py
auto_prepper/transformations/: dimensionality_reduction.py  duplicates.py  encoding.py  feature_generation.py  feature_selection.py  missing_values.py  outliers.py  oversampling.py  scaling.py  type_handling.py  undersampling.py
auto_prepper/utils/: data_types.py  dataset_type.py  exceptions.py  feature_type.py  helpers.py  str_subtype.py
output/original/: results_catboost_original.txt  results_cpu_original.txt  results_gpu_original.txt
prep_analysis/: helpers.py
prep_analysis/ag_patches/: lightgbm.py  nn_fastai.py  nn_torch.py  patch_all.py  realmlp.py  tabdpt.py  tabm.py  tabpfn.py
prep_analysis/analysis/: analysis.py  helpers_df.py  helpers_plot.py  numbers_analysis.py
prep_analysis/analysis/plots/: metric_heatmap.py  perf_bar.py  perf_gains_heatmap.py  ranking_level_bar_h.py  ranking_overall_sankey.py
prep_analysis/experiments/: experiment.py  parse_results.py
prep_analysis/run_scripts/: config_output_dir.py  run_analysis_experiment.py  run_analysis_original.py  run_analysis_small.py  run_experiment_cpu.py  run_experiment_gpu.py  run_experiment_small.py
